--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "TFS Team Room GIFer",
   "description": "Add makeshift animated GIF support to Team Foundation Server Team Rooms.",
-  "version": "2.1",
+  "version": "2.2",
   "icons": { "16":"icon_16.png", "48":"icon_48.png", "128":"icon_128.png" },
   "minimum_chrome_version": "6.0.472.41",
   "manifest_version": 2,
@@ -11,7 +11,7 @@
   },
   "content_scripts" : [
     {
-      "matches" : [ "*://*/_rooms*" ],
+      "matches" : [ "*://*/tfs/_rooms*" ],
       "js" : [ "jquery.js", "contentscript.js" ],
 	  "css" : [ "content.css" ],
       "run_at" : "document_idle",
